[jaehee] update winningList screen

--- a/src/Styles/Base/_fonts.scss
+++ b/src/Styles/Base/_fonts.scss
@@ -72,14 +72,14 @@
 }
 
 
-$font_SS : 0.5em;   // 8px
-$font_S : 0.625em; // 10px
-$font_M : 0.75em;  // 12px
-$font_R : 1em;     // 16px
-$font_RR : 1.125em;     // 18px
-$font_L : 1.25em;  // 20px
-$font_XL : 1.375em;  // 22px
-$font_XXL : 1.5625em;  // 25px
-
+$font_SS : 0.5rem;   // 8px
+$font_S : 0.625rem; // 10px
+$font_M : 0.75rem;  // 12px
+$font_R : 1rem;     // 16px
+$font_RR : 1.125rem;     // 18px
+$font_L : 1.25rem;  // 20px
+$font_XL : 1.375rem;  // 22px
+$font_XXL : 1.5625rem;  // 25px
+$font_title : 1.8rem;  // 30px
 
 
