[jaehee] update press

--- a/src/Styles/Base/_fonts.scss
+++ b/src/Styles/Base/_fonts.scss
@@ -72,9 +72,11 @@
 }
 
 
+$font_SSS : 0.3rem;   // 6px
 $font_SS : 0.5rem;   // 8px
 $font_S : 0.625rem; // 10px
 $font_M : 0.75rem;  // 12px
+$font_MR : 0.9375rem;  // 15px
 $font_R : 1rem;     // 16px
 $font_RR : 1.125rem;     // 18px
 $font_L : 1.25rem;  // 20px
