--- a/src/Styles/Components/_home.scss
+++ b/src/Styles/Components/_home.scss
@@ -33,7 +33,7 @@
   > .title{
     display: flex;
     align-items: flex-end;
-    height: 60px;
+    height: 50px;
     > * {
       margin: 0 4px;
     }
@@ -198,9 +198,42 @@
 .AdBannerSection {
     display: flex;
     padding: 50px 0 60px 0;
-    @include scrollBarNone1;
-    @include scrollBarNone2;
+    position: relative;
+    //@include scrollBarNone1;
+    //@include scrollBarNone2;
+    .arrowR {
+      position: absolute;
+      top:50%;
+      left:25px;
+      transform: translateY(-50%);
+      padding: 5px;
+      z-index: 50;
+      height: 100%;
+      img {
+        width: 10px;
+        transform: rotate(180deg);
+      }
+      :hover {
+        transform: scale(1.5)  rotate(180deg);
 
+      }
+    }
+    .arrowL {
+      position: absolute;
+      top:50%;
+      right: 25px;
+      transform: translateY(-50%);
+      padding: 5px;
+      z-index: 50;
+      height: 100%;
+      img {
+        width: 10px;
+
+      }
+      :hover {
+        transform: scale(1.5);
+      }
+    }
     > .AdBannerCover {
       display: flex;
       justify-content: center;
@@ -285,14 +318,17 @@
 }
 
 .winningBtn {
+  display: flex;
+  flex-grow: 0;
+  justify-content: flex-end;
   text-align: right;
-  //margin: 0 21x 100px 21px;
+  margin: 0 21px 100px 21px;
 }
 
 // winningListScreen.jsx
 .winningListCover {
   @include minScreenWidth;
-  .btnCover {
+  >.btnCover {
     display: flex;
     flex-grow: 1;
     flex-shrink: 0;
@@ -377,3 +413,133 @@
     }
   }
 }
+
+// AnalyticsScreen.jsx
+.analyticsCover {
+  padding: 20px 0;
+  > .lottoCover{
+    display: flex;
+    width: 100%;
+    padding: 0 15px;
+    margin-bottom: 21px;
+    > a {
+      width: 33%;
+      height: 110px;
+      border-radius: 20px;
+      margin: 0 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @include sectionBoxShadow;
+
+      > .box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 8px;
+        > img {
+          width: 100%;
+          max-width: 70px;
+          margin-bottom: 14px;
+        }
+        > strong {
+          font-size: $font_MR;
+          color: $REGULAR_GREY;
+        }
+      }
+      }
+    }
+    > a {
+      display: flex;
+      justify-content: center;
+      margin: 0 21px 200px 21px;
+      border-radius: 20px;
+      padding: 20px;
+      height: 110px;
+
+      @include sectionBoxShadow;
+
+      .systemBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        > img {
+          width: 80px;
+          margin: 6px 10px 0 10px;
+        }
+        > strong {
+          font-size: $font_MR;
+          color: $REGULAR_GREY;
+        }
+      }
+  }
+}
+
+// PressScreen.jsx
+.pressCover {
+    > h1 {
+      margin-bottom: 10px;
+    }
+   .pressBox{
+    border-radius: 15px;
+    padding: 10px 13px;
+    @include sectionBoxShadow;
+    margin: 0 21px 20px 21px;
+    > .titleCover {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid $LIGHT_GREY_3;
+      padding-bottom: 6px;
+      margin-bottom: 6px;
+      > .title {
+        font-size: $font_R;
+        > img {
+          width: 100%;
+          height: 22px;
+        }
+      }
+      .moreBtn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: $font_M;
+        line-height: 22px;
+        border-radius: 10px;
+        width: 62px;
+        height: 20px;
+        color: $LIGHT_GREY;
+        border: 1px solid $LIGHT_GREY;
+      }
+    }
+     > .contents {
+        > .title {
+          font-family: Noto_Bold;
+          font-size: $font_MR;
+          color: $REGULAR_GREY;
+          line-height: 30px;
+        }
+        > .content {
+          font-family: Noto_Regular;
+          color : $LIGHT_GREY;
+          font-size: $font_M;
+          line-height: 22px;
+        }
+     }
+     > .date {
+       border-top: 1px solid $LIGHT_GREY_3;
+       padding-top: 6px;
+       margin-top: 6px;
+       > strong, > span {
+         font-family: Noto_Regular;
+         color : $LIGHT_GREY;
+         font-size: $font_M;
+         line-height: 22px;
+         margin: 0 2px;
+       }
+     }
+  }
+}
+
+
