[jaehee] update route

--- a/src/Styles/Base/_colors.scss
+++ b/src/Styles/Base/_colors.scss
@@ -1,6 +1,6 @@
 
 // red
-  $MAIN_RED : #ff0000;
+  $MAIN_RED : #D52323;
   $REGULAR_RED : #E61D25;
   $LIGHT_RED : #FF6565;
   $LIGHT_RED_2 : #FF5F5F;
