--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -6,6 +6,7 @@
 @import "./Components/styleModule";
 @import "./Components/common";
 @import "./Components/home";
+@import "./Components/myCombine";
 
 
 
