--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -7,6 +7,8 @@
 @import "./Components/common";
 @import "./Components/home";
 @import "./Components/myCombine";
+@import "./Components/myPage";
+
 
 
 
