--- a/src/Styles/Components/_common.scss
+++ b/src/Styles/Components/_common.scss
@@ -486,13 +486,18 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
         }
       }
     }
-    > img {
+    > .qrImg {
       position: absolute;
       top: 47%;
       left: 50%;
       transform: translate(-50%, -50%);
       width: 50%;
       height: 50%;
+      > svg {
+        width: 100%;
+        height: 100%;
+
+      }
     }
     .downBtn {
       display: block;
