add login pages

--- a/src/Styles/Base/_fonts.scss
+++ b/src/Styles/Base/_fonts.scss
@@ -83,5 +83,6 @@ $font_L : 1.25rem;  // 20px
 $font_XL : 1.375rem;  // 22px
 $font_XXL : 1.5625rem;  // 25px
 $font_title : 1.8rem;  // 30px
+$font_title_big : 2.5rem // 40px
 
 
