--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -8,6 +8,7 @@
 @import "./Components/home";
 @import "./Components/myCombine";
 @import "./Components/myPage";
+@import "./Components/login";
 
 
 
