--- a/src/Styles/Components/_common.scss
+++ b/src/Styles/Components/_common.scss
@@ -145,7 +145,9 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
   align-items: center;
   padding: 8px 0;
   width: 100%;
+  height: 38px;
   border-radius: 5px;
+  margin-bottom: 10px;
   > img {
       width: 21px;
       height: auto;
@@ -165,10 +167,11 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
   flex-shrink: 0;
   justify-content: center;
   align-items: center;
-  border: 2px solid red;
+  border: 2px solid $MAIN_RED;
   height: 38px;
   width: 100%;
   border-radius: 5px;
+  margin-bottom: 10px;
   > img {
     width: 21px;
     height: auto;
@@ -177,7 +180,7 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
   > span {
     font-family: Noto_Bold, sans-serif;
     font-size: $font_MR;
-    color: red;
+    color: $MAIN_RED;
     line-height: 18px;
   }
 }
